[metadata]
name = pyhan
version = 0.0.13
author = Li ZongYing
author_email = lizongying@msn.com
description = 漢字處理工具。當前支持簡化字轉漢字。
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lizongying/pyhan
project_urls =
    Bug Tracker = https://github.com/lizongying/pyhan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = src

[options.package_data]
* = src/pyhan/files/*